# xmlargs

./: LICENSE  Makefile.am  README  configure.ac
docs/: .gitignore  Makefile.am  asciidoc.conf  xmlargs.txt  xmlforeach.txt
src/: .gitignore  Makefile.am  crawl-with-fork.h  header  process-handler.cc  process-handler.h  stream-dfs.h  test-xmlargs.sh  test-xmlforeach.sh  test-xmltsort.sh  xml-graph.h  xml-util.h  xmlargs.cc  xmlforeach.cc  xmltsort.cc  xpath-on-stream.h
src/data/: Makefile.am  bad-crawl.xml  failed  hier.sh  incomplete.xml  path.sh  small-cycle.xml  small.xml  tiny.xml  xmlargs-missed-one
src/data/golden/: incomplete.path  tiny.path  xmlargs1  xmlargs2  xmlargs3  xmlargs4
